--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,29 @@
-check_include_file_cxx(stdint.h HAVE_STDINT_H)
-if(HAVE_STDINT_H)
-    add_definitions(-DHAVE_STDINT_H)
-endif()
+set (source_files
+    model/routing_algorithm/route-info-entry.cc
+    model/routing_algorithm/ipv4-route-info-entry.cc
+    model/datapath/database.cc
+    model/datapath/lsa.cc
+    model/datapath/lsdb.cc
+    model/datapath/tsdb.cc
+)
+set (header_files
+    model/routing_algorithm/route-info-entry.h
+    model/routing_algorithm/ipv4-route-info-entry.h
+    model/datapath/database.h
+    model/datapath/lsa.h
+    model/datapath/lsdb.h
+    model/datapath/tsdb.h
 
-set(examples_as_tests_sources)
-if(${ENABLE_EXAMPLES})
-    set(examples_as_tests_sources
-        #test/romam-examples-test-suite.cc
-        )
-endif()
+)
 
 build_lib(
     LIBNAME romam
-    SOURCE_FILES model/routing_algorithm/route-info-entry.cc
-                    # model/romam.cc
-                #  helper/romam-helper.cc
-    HEADER_FILES model/routing_algorithm/route-info-entry.h
-                #  model/romam.h
-                #  helper/romam-helper.h
-    LIBRARIES_TO_LINK ${libcore}
-    TEST_SOURCES test/romam-test-suite.cc
-                 ${examples_as_tests_sources}
+    SOURCE_FILES ${source_files}
+    HEADER_FILES ${header_files}
+    LIBRARIES_TO_LINK
+        ${libnetwork}
+        ${libcore}
+        ${libbridge}
+        ${libtraffic-control}
+    TEST_SOURCES ${test_sources}
 )
-
