--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,24 +19,30 @@ set (source_files
     model/routing_algorithm/route-candidate-queue.cc
     model/routing_algorithm/dijkstra-route-info-entry.cc
     model/routing_algorithm/dijkstra-algorithm.cc
-    model/routing_algorithm/spf-algorithm.cc
+    # model/routing_algorithm/spf-algorithm.cc
     model/routing_algorithm/spf-route-info-entry.cc
     
     model/utility/romam-router.cc
     model/utility/route-manager.cc
     model/utility/ospf-router.cc
-    model/utility/dgr-router.cc
+    # model/utility/dgr-router.cc
+    # model/utility/octopus-router.cc
 
     model/romam-routing.cc
     model/ospf-routing.cc
     model/dgr-routing.cc
+    model/octopus-routing.cc
 
     model/applications/romam-tcp-application.cc
     model/applications/romam-udp-application.cc
     model/applications/romam-sink.cc
 
+    helper/romam-application-helper.cc
+    helper/romam-tcp-application-helper.cc
+    helper/romam-sink-helper.cc
     helper/romam-routing-helper.cc
     helper/ospf-helper.cc
+    # helper/octopus-helper.cc
 )
 set (header_files
     model/datapath/database.h
@@ -59,25 +65,30 @@ set (header_files
     model/routing_algorithm/route-candidate-queue.h
     model/routing_algorithm/dijkstra-route-info-entry.h
     model/routing_algorithm/dijkstra-algorithm.h
-    model/routing_algorithm/spf-algorithm.h
+    # model/routing_algorithm/spf-algorithm.h
     model/routing_algorithm/spf-route-info-entry.h
 
     model/utility/romam-router.h
     model/utility/route-manager.h
     model/utility/ospf-router.h
-    model/utility/dgr-router.h
+    # model/utility/dgr-router.h
+    # model/utility/octopus-router.h
 
     model/romam-routing.h
     model/ospf-routing.h
     model/dgr-routing.h
+    model/octopus-routing.h
 
     model/applications/romam-tcp-application.h
     model/applications/romam-udp-application.h
     model/applications/romam-sink.h
 
+    helper/romam-application-helper.h
+    helper/romam-tcp-application-helper.h
+    helper/romam-sink-helper.h
     helper/romam-routing-helper.h
     helper/ospf-helper.h
-    
+    # helper/octopus-helper.cc
 )
 
 build_lib(
