--- a/configs/experiments/sweep_100_300_1000.yaml
+++ b/configs/experiments/sweep_100_300_1000.yaml
@@ -1,8 +1,8 @@
 name: sweep_100_300_1000
 seed: 7
 protocols:
-  - ospf_like
-  - rip_like
+  - ospf
+  - rip
 sizes: [100, 300, 1000]
 repeats: 2
 topology:
