migrate experiments to containerlab and remove mininet codepaths

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,14 +11,15 @@ services:
     profiles: ["emu", "eval"]
     entrypoint: ["bash", "docker/entrypoints/run_emu.sh"]
 
-  mininet:
+  containerlab:
     build:
       context: ..
-      dockerfile: docker/Dockerfile.mininet
+      dockerfile: docker/Dockerfile.containerlab
     working_dir: /app
     privileged: true
     network_mode: host
     volumes:
       - ..:/app
-    profiles: ["mn"]
-    entrypoint: ["bash", "docker/entrypoints/run_mn.sh"]
+      - /var/run/docker.sock:/var/run/docker.sock
+    profiles: ["clab"]
+    entrypoint: ["bash", "docker/entrypoints/run_clab_exp.sh"]
