--- a/src/irp/Cargo.toml
+++ b/src/irp/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "irp_rust"
+name = "irp"
 version = "0.1.0"
 edition = "2021"
-description = "Rust runtime foundation for Intelligent Routing Protocol"
+description = "Rust routing daemon (routingd) for IRP experiments"
 
 [dependencies]
 anyhow = "1.0"
@@ -13,3 +13,11 @@ serde_json = "1.0"
 serde_yaml = "0.9"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+
+[[bin]]
+name = "routingd"
+path = "src/main.rs"
+
+[[bin]]
+name = "node_supervisor"
+path = "src/bin/node_supervisor.rs"
